# sentinel-edge

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: exceptions.py  interfaces.py  logging.py  system.py  types.py
src/drivers/: camera.py
src/inference/: engine.py
src/telemetry/: mqtt.py
src/web/: server.py
tests/: conftest.py  test_core.py  test_drivers.py  test_inference.py  test_system.py
ui/: package-lock.json  package.json
ui/src/: App.jsx
