[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-edge"
version = "0.1.0"
description = "Sovereign, local-first multimodal surveillance system for industrial anomaly detection."
authors = [
  { name = "Sentinel Team", email = "engineering@sentinel-edge.local" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = [
    "mlx",
    "mlx-vlm",
    "opencv-python",
    "librosa",
    "pydantic",
    "loguru",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
